# python-dev-template

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT_GUIDE.md  QUALITY.md  README.md  REVIEW_LOG.md  package.json  pyproject.toml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
.setup-tool/: README.md  package.json  setup.js
.setup-tool/templates/: QUALITY.md  README.md  REVIEW_LOG.md  pyproject.toml
scripts/: setup-lite.js  setup.js
skills/codex-review/: skill.md
skills/codex-review-requirements/: skill.md
skills/gemini-research/: skill.md
src/: __init__.py
tests/: conftest.py  test_example.py
