# ==============================================================================
# Python Development Template
# ==============================================================================
# 汎用的なPython開発テンプレート
# コピペで新規プロジェクトに適用可能
#
# 使い方:
#   1. name を変更
#   2. dependencies を追加
#   3. uv pip install -e ".[dev]"  # または: uv sync
# ==============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "your-project-name"  # ← 変更してください
version = "0.1.0"
description = "プロジェクトの説明"  # ← 変更してください
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }  # ← 変更してください
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # 本番依存関係をここに追加
    # "requests>=2.31.0",
    # "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.4",
    "pre-commit>=3.6",
]

# ==============================================================================
# Ruff（高速Linter + Formatter）
# ==============================================================================
# Flake8 + isort + Black + pyupgrade + Bandit を1ツールに統合
# 参考: https://docs.astral.sh/ruff/

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort（インポート順序）
    "B",      # flake8-bugbear（バグの可能性）
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade（モダンな書き方）
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit（セキュリティ）
    "RUF",    # Ruff固有ルール
]
ignore = [
    "E501",   # 行長はformatterに任せる
    "S101",   # assert使用許可（テスト用）
    "RUF002", # 全角文字（日本語ドキュメント用）
    "RUF003", # 全角文字（日本語ドキュメント用）
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # テストでのassert許可
    "ARG",    # fixture引数の未使用許可
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# Mypy（型チェック）
# ==============================================================================
# 参考: https://mypy.readthedocs.io/

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # 段階的に true に変更
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# ==============================================================================
# Pytest
# ==============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ==============================================================================
# Coverage
# ==============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
fail_under = 0  # テンプレート用。実コード追加後に50→80%に上げる
show_missing = true
skip_covered = true
